# cli

./: Cargo.toml  README.md  go.mod  go.sum
.github/workflows/: ci.yml
src/: credentials.rs  main.rs  models.rs  utils.rs
src/commands/: deploy.rs  mod.rs  postgres.rs
src/commands/apps/: mod.rs
src/commands/auth/: info.rs  login.rs  mod.rs
