[package]
edition = "2018"
name = "haas_cli"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
reqwest = {version = "0.11.5", features = ["blocking", "json"]}
serde = {version = "1.0.130", features = ["derive"]}
termion = "1.5.6"
